skill-management-system/k8s/devOps/base/ingress.yaml
---
# Jenkins IngressRoute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-https
  namespace: skill-management-devops-prod
  labels:
    app: jenkins
    environment: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.skill-management-devops.edag.com`)
      kind: Rule
      services:
        - name: prod-sms-jenkins-service
          port: 8080
  tls:
    secretName: devops-tls
---
# SonarQube IngressRoute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarqube-https
  namespace: skill-management-devops-prod
  labels:
    app: sonarqube
    environment: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarqube.skill-management-devops.edag.com`)
      kind: Rule
      services:
        - name: prod-sms-sonarqube-service
          port: 9000
  tls:
    secretName: devops-tls
---
# Docker Registry IngressRoute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry-http
  namespace: skill-management-devops-prod
  labels:
    app: docker-registry
    environment: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.skill-management-devops.edag.com`)
      kind: Rule
      services:
        - name: prod-sms-docker-registry-service
          port: 5000
  tls:
    secretName: devops-tls
